--- a/DreamLister/Base.lproj/Main.storyboard
+++ b/DreamLister/Base.lproj/Main.storyboard
@@ -1,24 +1,175 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="g2B-US-Ept">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--DreamLister-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="DreamLister" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="c3d-C0-HCq">
+                                <rect key="frame" x="20" y="84" width="335" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="27" id="lKy-Ow-Nax"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Newest"/>
+                                    <segment title="Price"/>
+                                    <segment title="Title"/>
+                                </segments>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3WE-fd-Ks9">
+                                <rect key="frame" x="0.0" y="131" width="375" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="150" id="alj-yK-1c3" customClass="ItemCell" customModule="DreamLister" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="150"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="alj-yK-1c3" id="fuX-g1-rjQ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mqI-V6-dDE">
+                                                    <rect key="frame" x="7" y="9" width="361" height="132"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tesla" translatesAutoresizingMaskIntoConstraints="NO" id="cgf-yd-ma2">
+                                                            <rect key="frame" x="15" y="13.5" width="105" height="105"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="105" id="Hvd-vF-z1S"/>
+                                                                <constraint firstAttribute="height" constant="105" id="h7R-S9-2n6"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tesla Model S" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jyy-Ik-qxx">
+                                                            <rect key="frame" x="128" y="8" width="225" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="xe4-Pk-6HF"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="19"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$80,000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fko-kl-SZD">
+                                                            <rect key="frame" x="128" y="37" width="225" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="Ck2-J8-9kt"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Someday my dreams will come true and Iown this car. Just you wait" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MIV-wO-NsA">
+                                                            <rect key="frame" x="128" y="66" width="225" height="58"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="Jyy-Ik-qxx" secondAttribute="trailing" constant="8" id="4ap-Nv-BJL"/>
+                                                        <constraint firstItem="fko-kl-SZD" firstAttribute="top" secondItem="Jyy-Ik-qxx" secondAttribute="bottom" constant="8" id="7oL-dN-2Me"/>
+                                                        <constraint firstItem="fko-kl-SZD" firstAttribute="leading" secondItem="cgf-yd-ma2" secondAttribute="trailing" constant="8" id="D9I-xm-qys"/>
+                                                        <constraint firstItem="cgf-yd-ma2" firstAttribute="leading" secondItem="mqI-V6-dDE" secondAttribute="leading" constant="15" id="IXb-oz-UVp"/>
+                                                        <constraint firstItem="MIV-wO-NsA" firstAttribute="top" secondItem="fko-kl-SZD" secondAttribute="bottom" constant="8" id="J9N-8N-I05"/>
+                                                        <constraint firstAttribute="trailing" secondItem="fko-kl-SZD" secondAttribute="trailing" constant="8" id="Odq-fk-wfh"/>
+                                                        <constraint firstAttribute="trailing" secondItem="MIV-wO-NsA" secondAttribute="trailing" constant="8" id="Olj-64-EUO"/>
+                                                        <constraint firstItem="MIV-wO-NsA" firstAttribute="leading" secondItem="cgf-yd-ma2" secondAttribute="trailing" constant="8" id="VQl-c9-bZa"/>
+                                                        <constraint firstItem="Jyy-Ik-qxx" firstAttribute="leading" secondItem="cgf-yd-ma2" secondAttribute="trailing" constant="8" id="WRs-Du-vFX"/>
+                                                        <constraint firstItem="Jyy-Ik-qxx" firstAttribute="top" secondItem="mqI-V6-dDE" secondAttribute="top" constant="8" id="c55-kK-ppZ"/>
+                                                        <constraint firstAttribute="bottom" secondItem="MIV-wO-NsA" secondAttribute="bottom" constant="8" id="p4s-dg-BAe"/>
+                                                        <constraint firstItem="cgf-yd-ma2" firstAttribute="centerY" secondItem="mqI-V6-dDE" secondAttribute="centerY" id="wrd-GG-7RS"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="mqI-V6-dDE" firstAttribute="top" secondItem="fuX-g1-rjQ" secondAttribute="topMargin" constant="-2" id="2nP-CM-v72"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="mqI-V6-dDE" secondAttribute="trailing" constant="-8" id="DLx-hH-RY7"/>
+                                                <constraint firstItem="mqI-V6-dDE" firstAttribute="leading" secondItem="fuX-g1-rjQ" secondAttribute="leadingMargin" constant="-8" id="c0a-R3-BTP"/>
+                                                <constraint firstItem="mqI-V6-dDE" firstAttribute="bottom" secondItem="fuX-g1-rjQ" secondAttribute="bottomMargin" constant="2" id="f2m-HS-0dq"/>
+                                            </constraints>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="materialDesign" value="YES"/>
+                                            </userDefinedRuntimeAttributes>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="imgThumb" destination="cgf-yd-ma2" id="Juz-Yz-Rhd"/>
+                                            <outlet property="lblDescription" destination="MIV-wO-NsA" id="Jh4-NP-m9x"/>
+                                            <outlet property="lblPrice" destination="fko-kl-SZD" id="D0Q-NY-cQG"/>
+                                            <outlet property="lblTitle" destination="Jyy-Ik-qxx" id="0MM-Qb-6Uz"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="yq3-fF-JFU"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ZH8-sl-MpX"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="c3d-C0-HCq" secondAttribute="trailing" constant="20" id="2qL-p0-Uvz"/>
+                            <constraint firstItem="3WE-fd-Ks9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="JKQ-FT-B98"/>
+                            <constraint firstItem="c3d-C0-HCq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="YfE-nf-ojv"/>
+                            <constraint firstItem="3WE-fd-Ks9" firstAttribute="top" secondItem="c3d-C0-HCq" secondAttribute="bottom" constant="20" id="fBt-mw-d2c"/>
+                            <constraint firstItem="3WE-fd-Ks9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mfX-uc-SfC"/>
+                            <constraint firstItem="3WE-fd-Ks9" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="wWp-Jr-Wmp"/>
+                            <constraint firstItem="c3d-C0-HCq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ypE-4p-eMh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="DreamLister" id="SwJ-ES-5n7">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ozW-aS-Ta8">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="segmentedControl" destination="c3d-C0-HCq" id="Cut-Ns-iQh"/>
+                        <outlet property="tableView" destination="3WE-fd-Ks9" id="Ms1-sV-B8a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1084" y="-580.65967016491754"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="bEA-cN-IJ1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="g2B-US-Ept" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xvY-Rr-Rst">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Knr-ml-cch"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="i36-hH-QdW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="-579.76011994002999"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tesla" width="800" height="489"/>
+    </resources>
 </document>
