--- a/DreamLister/Base.lproj/Main.storyboard
+++ b/DreamLister/Base.lproj/Main.storyboard
@@ -135,11 +135,15 @@
                     <navigationItem key="navigationItem" title="DreamLister" id="SwJ-ES-5n7">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ozW-aS-Ta8">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="B0X-zl-Vgm" kind="show" id="Wjw-gM-0e4"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="segmentedControl" destination="c3d-C0-HCq" id="Cut-Ns-iQh"/>
                         <outlet property="tableView" destination="3WE-fd-Ks9" id="Ms1-sV-B8a"/>
+                        <segue destination="B0X-zl-Vgm" kind="show" id="L9w-UM-57T"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -154,9 +158,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xvY-Rr-Rst">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -168,8 +173,119 @@
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="-579.76011994002999"/>
         </scene>
+        <!--Add/Edit-->
+        <scene sceneID="FMa-zE-lfz">
+            <objects>
+                <viewController id="B0X-zl-Vgm" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="SoM-gV-G7l">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePick" translatesAutoresizingMaskIntoConstraints="NO" id="2WP-6n-bCX">
+                                <rect key="frame" x="15" y="84" width="115" height="115"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="115" id="3ks-Bg-hT6"/>
+                                    <constraint firstAttribute="width" constant="115" id="tr0-sc-XYb"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nZV-9P-b3L" customClass="CustomTextField" customModule="DreamLister" customModuleProvider="target">
+                                <rect key="frame" x="145" y="94" width="220" height="40"/>
+                                <color key="backgroundColor" red="0.91626348350253806" green="0.91626348350253806" blue="0.91626348350253806" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Wq1-cs-BqG"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wED-G4-PLi" customClass="CustomTextField" customModule="DreamLister" customModuleProvider="target">
+                                <rect key="frame" x="145" y="159" width="220" height="40"/>
+                                <color key="backgroundColor" red="0.91626348349999998" green="0.91626348349999998" blue="0.91626348349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="VOt-EX-C9m"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Details" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hzc-xO-Abd" customClass="CustomTextField" customModule="DreamLister" customModuleProvider="target">
+                                <rect key="frame" x="15" y="219" width="345" height="60"/>
+                                <color key="backgroundColor" red="0.91626348349999998" green="0.91626348349999998" blue="0.91626348349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="zA5-wA-JL4"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Store" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eDc-vn-lpv">
+                                <rect key="frame" x="137.5" y="314" width="100" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="U4g-Sq-Sf8"/>
+                                    <constraint firstAttribute="width" constant="100" id="Xxl-Pw-Nhf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="55Q-7q-pPg">
+                                <rect key="frame" x="0.0" y="374" width="375" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="oDI-eW-igA"/>
+                                </constraints>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kYu-K3-gAT">
+                                <rect key="frame" x="30" y="607" width="315" height="40"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="zJv-nf-mS6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <state key="normal" title="Save Item">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="9CZ-dV-G2O" firstAttribute="trailing" secondItem="wED-G4-PLi" secondAttribute="trailing" constant="10" id="7F6-UQ-aUd"/>
+                            <constraint firstItem="9CZ-dV-G2O" firstAttribute="bottom" secondItem="kYu-K3-gAT" secondAttribute="bottom" constant="20" id="FUt-tj-cvX"/>
+                            <constraint firstItem="9CZ-dV-G2O" firstAttribute="trailing" secondItem="hzc-xO-Abd" secondAttribute="trailing" constant="15" id="H1A-Vo-BW6"/>
+                            <constraint firstItem="kYu-K3-gAT" firstAttribute="leading" secondItem="9CZ-dV-G2O" secondAttribute="leading" constant="30" id="H22-bJ-gC1"/>
+                            <constraint firstItem="55Q-7q-pPg" firstAttribute="top" secondItem="eDc-vn-lpv" secondAttribute="bottom" constant="20" id="JIA-85-b5k"/>
+                            <constraint firstItem="2WP-6n-bCX" firstAttribute="leading" secondItem="9CZ-dV-G2O" secondAttribute="leading" constant="15" id="Mni-Vp-nbH"/>
+                            <constraint firstItem="nZV-9P-b3L" firstAttribute="leading" secondItem="2WP-6n-bCX" secondAttribute="trailing" constant="15" id="N4e-zA-5OD"/>
+                            <constraint firstItem="eDc-vn-lpv" firstAttribute="centerX" secondItem="SoM-gV-G7l" secondAttribute="centerX" id="Od3-28-yam"/>
+                            <constraint firstItem="hzc-xO-Abd" firstAttribute="leading" secondItem="9CZ-dV-G2O" secondAttribute="leading" constant="15" id="Q10-dt-wFk"/>
+                            <constraint firstItem="9CZ-dV-G2O" firstAttribute="trailing" secondItem="nZV-9P-b3L" secondAttribute="trailing" constant="10" id="R2M-Yg-mYq"/>
+                            <constraint firstItem="hzc-xO-Abd" firstAttribute="top" secondItem="2WP-6n-bCX" secondAttribute="bottom" constant="20" id="V9H-12-1HH"/>
+                            <constraint firstItem="wED-G4-PLi" firstAttribute="top" secondItem="nZV-9P-b3L" secondAttribute="bottom" constant="25" id="ZXW-iZ-jWg"/>
+                            <constraint firstItem="2WP-6n-bCX" firstAttribute="top" secondItem="9CZ-dV-G2O" secondAttribute="top" constant="20" id="dKc-Gc-yjI"/>
+                            <constraint firstItem="eDc-vn-lpv" firstAttribute="top" secondItem="hzc-xO-Abd" secondAttribute="bottom" constant="35" id="dWt-oJ-7JL"/>
+                            <constraint firstItem="55Q-7q-pPg" firstAttribute="leading" secondItem="9CZ-dV-G2O" secondAttribute="leading" id="g2C-WK-3sJ"/>
+                            <constraint firstItem="nZV-9P-b3L" firstAttribute="top" secondItem="9CZ-dV-G2O" secondAttribute="top" constant="30" id="q2l-VI-cwJ"/>
+                            <constraint firstItem="wED-G4-PLi" firstAttribute="leading" secondItem="2WP-6n-bCX" secondAttribute="trailing" constant="15" id="qy1-gn-8LR"/>
+                            <constraint firstItem="9CZ-dV-G2O" firstAttribute="trailing" secondItem="kYu-K3-gAT" secondAttribute="trailing" constant="30" id="wh3-LG-rZC"/>
+                            <constraint firstItem="55Q-7q-pPg" firstAttribute="trailing" secondItem="9CZ-dV-G2O" secondAttribute="trailing" id="z7X-H3-0CD"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9CZ-dV-G2O"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add/Edit" id="ySu-QM-ngS">
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="trash" id="3FL-hg-fx4">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ni1-xz-rsd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1792.8" y="-580.65967016491754"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="imagePick" width="300" height="300"/>
         <image name="tesla" width="800" height="489"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Wjw-gM-0e4"/>
+    </inferredMetricsTieBreakers>
 </document>
